unpackaged/main/default/objects/Oracle_Show_Booth_Contact__c/Oracle_Show_Booth_Contact__c.object-meta.xml
<CustomObject>
    <description>Show Occurrence Booth Contacts from Oracle</description>
    <label>Booth Contact</label>
    <nameField>
        <displayFormat>BC-{000000000}</displayFormat>
        <label>Record Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booth Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>