unpackaged/main/default/objects/Oracle_Show_Booth_Contact__c/fields/Agency_Phone__c.field-meta.xml
<CustomField>
    <fullName>Agency_Phone__c</fullName>
    <label>Agency Phone</label>
    <type>Phone</type>
</CustomField>