unpackaged/main/default/objects/Oracle_Show_Booth_Contact__c/fields/AREA_CODE__c.field-meta.xml
<CustomField>
    <fullName>AREA_CODE__c</fullName>
    <description>Oracle Booth Contact Phone Area Code</description>
    <label>Area Code</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>