unpackaged/main/default/objects/Oracle_Show_Booth_Contact__c/fields/Booth_Name__c.field-meta.xml
<CustomField>
    <fullName>Booth_Name__c</fullName>
    <formula>Oracle_Show_Booth__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booth Name</label>
    <type>Text</type>
</CustomField>