unpackaged/main/default/objects/Oracle_Show_Booth_Contact__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relationship field to Contact</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Booth_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>