unpackaged/main/default/objects/Oracle_Show_Booth_Contact__c/fields/CONTACT_ROLE__c.field-meta.xml
<CustomField>
    <fullName>CONTACT_ROLE__c</fullName>
    <defaultValue>&quot;BOOTH&quot;</defaultValue>
    <description>Oracle Booth Contact Role</description>
    <label>Role</label>
    <length>30</length>
    <type>Text</type>
</CustomField>