unpackaged/main/default/objects/Oracle_Show_Booth_Contact__c/fields/CONTACT_TYPE__c.field-meta.xml
<CustomField>
    <fullName>CONTACT_TYPE__c</fullName>
    <defaultValue>&quot;SECONDARY&quot;</defaultValue>
    <description>Oracle Booth Contact Type</description>
    <label>Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>