unpackaged/main/default/objects/Oracle_Show_Booth_Contact__c/fields/Contractor_Contact__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Contact__c</fullName>
    <label>Contractor Contact</label>
    <length>50</length>
    <type>Text</type>
</CustomField>