unpackaged/main/default/objects/Oracle_Show_Booth_Contact__c/fields/COUNTRY_CODE__c.field-meta.xml
<CustomField>
    <fullName>COUNTRY_CODE__c</fullName>
    <description>Oracle Booth Contact Phone Country Code</description>
    <label>Country Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>