unpackaged/main/default/objects/Oracle_Show_Booth_Contact__c/fields/CUST_BOOTH_ID__c.field-meta.xml
<CustomField>
    <fullName>CUST_BOOTH_ID__c</fullName>
    <description>Oracle Customer Booth Id</description>
    <label>CUST_BOOTH_ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>