unpackaged/main/default/objects/Oracle_Show_Booth_Contact__c/fields/CUST_CONT_ID__c.field-meta.xml
<CustomField>
    <fullName>CUST_CONT_ID__c</fullName>
    <description>Oracle Customer Contact Id</description>
    <label>CUST_CONT_ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>