unpackaged/main/default/objects/Oracle_Show_Booth_Contact__c/fields/EMAIL__c.field-meta.xml
<CustomField>
    <fullName>EMAIL__c</fullName>
    <description>Oracle Booth Contact Email</description>
    <label>Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>