unpackaged/main/default/objects/Oracle_Show_Booth_Contact__c/fields/EXTENSION__c.field-meta.xml
<CustomField>
    <fullName>EXTENSION__c</fullName>
    <description>Oracle Booth Contact Phone Extension</description>
    <label>Extension</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>