unpackaged/main/default/objects/Oracle_Show_Booth_Contact__c/fields/FAX__c.field-meta.xml
<CustomField>
    <fullName>FAX__c</fullName>
    <description>Oracle Booth Contact Fax</description>
    <label>Fax</label>
    <length>50</length>
    <type>Text</type>
</CustomField>