unpackaged/main/default/objects/Oracle_Show_Booth_Contact__c/fields/FIRST_NAME__c.field-meta.xml
<CustomField>
    <fullName>FIRST_NAME__c</fullName>
    <description>Oracle Booth Contact First Name</description>
    <label>First Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>