unpackaged/main/default/objects/Oracle_Show_Booth_Contact__c/fields/LAST_NAME__c.field-meta.xml
<CustomField>
    <fullName>LAST_NAME__c</fullName>
    <description>Oracle Booth Contact Last Name</description>
    <label>Last Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>