unpackaged/main/default/objects/Oracle_Show_Booth_Contact__c/fields/Mailing_Country__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Country__c</fullName>
    <label>Country</label>
    <length>40</length>
    <type>Text</type>
</CustomField>