unpackaged/main/default/objects/Oracle_Show_Booth_Contact__c/fields/Mailing_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Postal_Code__c</fullName>
    <label>Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>