unpackaged/main/default/objects/Oracle_Show_Booth_Contact__c/fields/Mailing_Street__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Street__c</fullName>
    <label>Street</label>
    <type>TextArea</type>
</CustomField>