unpackaged/main/default/objects/Oracle_Show_Booth_Contact__c/fields/Oracle_Show_Booth__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Show_Booth__c</fullName>
    <description>Master Detail relationship to parent Booth</description>
    <label>Booth</label>
    <referenceTo>Oracle_Show_Booth__c</referenceTo>
    <relationshipLabel>Booth Contacts</relationshipLabel>
    <relationshipName>Booth_Contacts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>