unpackaged/main/default/objects/Oracle_Show_Booth_Contact__c/fields/PHONE__c.field-meta.xml
<CustomField>
    <fullName>PHONE__c</fullName>
    <description>Oracle Booth Contact Phone</description>
    <label>Phone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>