unpackaged/main/default/objects/Oracle_Show_Booth_Contact__c/fields/PRIMARY_FLAG__c.field-meta.xml
<CustomField>
    <fullName>PRIMARY_FLAG__c</fullName>
    <description>Oracle Booth Contact Primary</description>
    <label>Primary Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>