unpackaged/main/default/objects/Oracle_Show_Booth_Contact__c/fields/Show_ID__c.field-meta.xml
<CustomField>
    <fullName>Show_ID__c</fullName>
    <description>System field utilized within an autolaunch flow triggered by inserting a new campaign member.</description>
    <formula>CASESAFEID(Oracle_Show_Booth__r.Show_Occurrence__r.Show_Name__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show ID</label>
    <type>Text</type>
</CustomField>