unpackaged/main/default/objects/Oracle_Show_Booth_Contact__c/fields/SHOW_OCCR_CUST_ID__c.field-meta.xml
<CustomField>
    <fullName>SHOW_OCCR_CUST_ID__c</fullName>
    <description>Oracle Show Occurrence Customer Id</description>
    <label>SHOW_OCCR_CUST_ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>