unpackaged/main/default/objects/Oracle_Show_Booth_Contact__c/fields/Sync_with_Marketo__c.field-meta.xml
<CustomField>
    <fullName>Sync_with_Marketo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to identify booth contacts for marketo</description>
    <label>Sync with Marketo</label>
    <type>Checkbox</type>
</CustomField>