unpackaged/main/default/objects/Oracle_Show_Booth_Contact__c/fields/Updated_in_CORE__c.field-meta.xml
<CustomField>
    <fullName>Updated_in_CORE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Updated in CORE</label>
    <type>Checkbox</type>
</CustomField>