unpackaged/main/default/objects/Oracle_Show_Booth_Contact__c/validationRules/Required_BoothContact_Booth.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_BoothContact_Booth</fullName>
    <active>true</active>
    <description>BoothContact must be associated to a Booth record. The error message should be displayed when Booth is not specified (i.e. Oracle_Show_Booth__c field is blank).</description>
    <errorConditionFormula>ISBLANK(Oracle_Show_Booth__c)</errorConditionFormula>
    <errorDisplayField>Oracle_Show_Booth__c</errorDisplayField>
    <errorMessage>Booth is required on Booth Contact. Please provide a valid Booth Id in the Oracle_Show_Booth__c field.</errorMessage>
</ValidationRule>