unpackaged/main/default/objects/Oracle_Show_Booth_Contact__c/validationRules/Required_BoothContact_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_BoothContact_Contact</fullName>
    <active>true</active>
    <description>BoothContact must be associated to a Contact record. The error message should be displayed when Contact is not specified (i.e. Contact__c field is blank).</description>
    <errorConditionFormula>ISBLANK(Contact__c)</errorConditionFormula>
    <errorDisplayField>Contact__c</errorDisplayField>
    <errorMessage>Contact is required on Booth Contact. Please provide a valid Contact Id in the Contact__c field.</errorMessage>
</ValidationRule>